# Empirical_AssetPricing_FamaFrench

./: .gitignore  README.md  pyproject.toml
data/processed/: df_INV.parquet  df_INV_ff5.parquet  df_OP.parquet  df_OP_ff5.parquet  df_SIZE.parquet  df_SIZE_ff5.parquet  factors_df.parquet  ff5_factors_monthly.parquet  ff_factors_monthly.parquet  ff_portfolios_25_ME_BEME.parquet  ff_portfolios_25_ME_INV.parquet  ff_portfolios_25_ME_OP.parquet  ff_portfolios_25_monthly.parquet  ff_portfolios_32_ME_BEME_INV.parquet  ff_portfolios_32_ME_BEME_OP.parquet
data/raw/: 25_Portfolios_5x5.csv  25_Portfolios_ME_INV_5x5.csv  25_Portfolios_ME_OP_5x5.csv  32_Portfolios_ME_BEME_INV_2x4x4_Wout_Div.csv  32_Portfolios_ME_BEME_OP_2x4x4.csv  F-F_Research_Data_5_Factors_2x3.csv  F-F_Research_Data_Factors.csv
notebooks/: 01_data_cleaning.ipynb  01_replication.ipynb  02_regressions.ipynb  02_replication.ipynb  03_GRS_tests.ipynb  03_extension.ipynb  04_ff2015_full_sample.ipynb  svd_factor_comparison.ipynb
results/: capm_results.csv  ff3_results.csv  ff5_results.csv
utils/: ff_functions.py
