[project]
name = "empirical-assetpricing-famafrench"
version = "0.1.0"
description = "Application of the Fama-French Three-Factor and Five-Factor Model for US equity returns"
authors = [{name = "adrymmm", email = "233598406+adrymmm@users.noreply.github.com"}]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pandas>=3.0.1",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "pyarrow>=23.0.1",
    "matplotlib>=3.10.8",
    "ipykernel>=7.2.0",
    "fastparquet>=2025.12.0",
]

[tool.poetry]
packages = [{include = "utils"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"